@@ -1,3 +1,9 @@
+Fri, 04 Jul 2008 18:47:19 +0200 <thp@perli.net>
+New look for the "pill" pixbuf
+
+	* src/gpodder/draw.py: Refresh the look of the "pill" pixbuf code, so
+	we have a more visually pleasing status display in the podcast list
+
 Thu, 03 Jul 2008 20:09:18 -0400 <me@nikosapi.org>
 Display message if user tries to sync to iPod without gpod installed
 
